# symposium-rust-analyzer

./: CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md
.github/workflows/: release.yml
src/: failed_obligations.rs  lib.rs  lsp_client.rs  main.rs  rust_analyzer_mcp.rs  rust_analyzer_proxy.rs
tests/: basic_integration.rs  basic_integration_test.rs
tests/test-project/src/: main.rs
