[package]
name = "symposium-rust-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
indoc = "2.0.7"
lsp-bridge = "0.1.0"
lsp-types = "0.97"
sacp = "9.0.0"
sacp-tokio = "9.0.0"
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
elizacp = "9.0.0"
yopo = "9.0.0"
expect-test = "1.5"
sacp-conductor = "9.0.0"
