[package]
name = "symposium-rust-analyzer"
version = "0.1.0"
edition = "2024"
license = "MIT or Apache-2.0"
description = "Symposium rust-analyzer proxy - an MCP server connecting to rust-analyzer and a ACP Proxy managing it"
repository = "https://github.com/symposium-dev/symposium-rust-analyzer"
readme = "README.md"


[dependencies]
anyhow = "1.0.100"
indoc = "2.0.7"
lsp-types = "0.97"
sacp = "9.0.0"
sacp-tokio = "9.0.0"
schemars = "1.1.0"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "process", "tracing", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4"] }

[dev-dependencies]
elizacp = "9.0.0"
yopo = "9.0.0"
expect-test = "1.5"
sacp-conductor = "9.0.0"
